// Copyright Â© 2017-2018 Canonical Ltd.
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License version 3 as
// published by the Free Software Foundation.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.
//
// Authored by: Alberto Aguirre <alberto.aguirre@canonical.com>

syntax = "proto3";
package multipass;

service Rpc {
    rpc launch (LaunchRequest) returns (stream LaunchReply);
    rpc purge (PurgeRequest) returns (PurgeReply);
    rpc find (FindRequest) returns (FindReply);
    rpc info (InfoRequest) returns (InfoReply);
    rpc list (ListRequest) returns (ListReply);
    rpc mount (MountRequest) returns (MountReply);
    rpc ping (PingRequest) returns (PingReply);
    rpc recover (RecoverRequest) returns (RecoverReply);
    rpc ssh_info (SSHInfoRequest) returns (SSHInfoReply);
    rpc start (StartRequest) returns (StartReply);
    rpc stop (StopRequest) returns (StopReply);
    rpc delet (DeleteRequest) returns (DeleteReply);
    rpc umount (UmountRequest) returns (UmountReply);
    rpc version (VersionRequest) returns (VersionReply);
}

message OptInStatus {
    enum Status {
        UNKNOWN = 0;
        PENDING = 1;
        LATER = 2;
        ACCEPTED = 3;
        DENIED = 4;
    }
    Status opt_in_status = 1;
}

message LaunchRequest {
    string instance_name = 1;
    string image = 2;
    string kernel_name = 3;
    int32 num_cores = 4;
    string mem_size = 5; // units?
    string disk_space = 6; // units?
    string time_zone = 7;
    string cloud_init_user_data = 8;
    string remote_name = 9;
    OptInStatus opt_in_reply = 10;
}

message LaunchError {
    enum ErrorCodes {
        OK = 0;
        INSTANCE_EXISTS = 1;
        INVALID_MEM_SIZE = 2;
        INVALID_DISK_SIZE = 3;
        INVALID_HOSTNAME = 4;
    }
    repeated ErrorCodes error_codes = 1;
}

message LaunchProgress {
    enum ProgressTypes {
        IMAGE = 0;
        KERNEL = 1;
        INITRD = 2;
        EXTRACT = 3;
        VERIFY = 4;
    }
    ProgressTypes type = 1;
    string percent_complete = 2;
}

message MetricsShowInfo {
    // TODO: Place holder for real host data
    message HostInfo {
        string release = 1;
    }
    // TODO: Place holder for real instance data
    message InstanceInfo {
        string release = 1;
    }
    HostInfo host_info = 1;
    repeated InstanceInfo instances_info = 2;
}

message LaunchReply {
    oneof create_oneof {
        string vm_instance_name = 1;
        LaunchProgress launch_progress = 2;
        string create_message = 3;
    }
    bool metrics_pending = 4;
    MetricsShowInfo metrics_show_info = 5;
}

message PurgeRequest {
}

message PurgeReply {
}

message FindRequest {
    string search_string = 1;
    string remote_name = 2;
}

message FindReply {
    message AliasInfo {
        string remote_name = 1;
        string alias = 2;
    }
    message ImageInfo {
        string release = 1;
        string version = 2;
        repeated AliasInfo aliases_info = 3;
    }
    repeated ImageInfo images_info = 1;
}

message InfoRequest {
    repeated string instance_name = 1;
}

message MountInfo {
    message MountPaths {
        string source_path = 1;
        string target_path = 2;
    }
    uint32 longest_path_len = 1;
    repeated MountPaths mount_paths = 2;
}

message InstanceStatus {
    enum Status {
        RUNNING = 0;
        STARTING = 1;
        RESTARTING = 2;
        STOPPED = 3;
        DELETED = 4;
        UNKNOWN = 5;
    }
    Status status = 1;
}

message InfoReply {
    message Info {
        string name = 1;
        InstanceStatus instance_status = 2;
        string image_release = 3;
        string current_release = 4;
        string id = 5;
        string load = 6;
        string memory_usage = 7;
        string memory_total = 8;
        string disk_usage = 9;
        string disk_total = 10;
        string ipv4 = 11;
        string ipv6 = 12;
        MountInfo mount_info = 13;
    }
    repeated Info info = 1;
}

message ListRequest {
}

message ListVMInstance {
    string name = 1;
    InstanceStatus instance_status = 2;
    string ipv4 = 3;
    string ipv6 = 4;
    string current_release = 5;
}

message ListReply {
    repeated ListVMInstance instances = 1;
}

message TargetPathInfo {
    string instance_name = 1;
    string target_path = 2;
}

message MountUidMap {
    int32 host_uid = 1;
    int32 instance_uid = 2;
}

message MountGidMap {
    int32 host_gid = 1;
    int32 instance_gid = 2;
}

message MountError {
    enum ErrorCode {
        OK = 0;
        SSHFS_MISSING = 1;
        OTHER = 2;
    }
    string instance_name = 1;
    ErrorCode error_code = 2;
}

message MountRequest {
    string source_path = 1;
    repeated TargetPathInfo target_paths = 2;
    repeated MountUidMap uid_maps = 3;
    repeated MountGidMap gid_maps = 4;
}

message MountReply {
}

message PingRequest {
}

message PingReply {
}

message RecoverRequest {
    repeated string instance_name = 1;
}

message RecoverReply {
}

message SSHInfoRequest {
    repeated string instance_name = 1;
}

message SSHInfo {
    int32 port = 1;
    string priv_key_base64 = 2;
    string host = 3;
    string username = 4;
}

message SSHInfoReply {
    map<string, SSHInfo> ssh_info = 1;
}

message StartError {
    enum ErrorCode {
        OK = 0;
        DOES_NOT_EXIST = 1;
        INSTANCE_DELETED = 2;
        OTHER = 3;
    }
    string instance_name = 1;
    ErrorCode error_code = 2;
}

message StartRequest {
    repeated string instance_name = 1;
}

message StartReply {
}

message StopRequest {
    repeated string instance_name = 1;
    int32 time = 2;
}

message StopReply {
}

message DeleteRequest {
    repeated string instance_name = 1;
    bool purge = 2;
}

message DeleteReply {
}

message UmountRequest {
    repeated TargetPathInfo target_paths = 1;
}

message UmountReply {
}

message VersionRequest {
}

message VersionReply {
    string version = 1;
}
